@@ -26,7 +26,7 @@ $lang_plugin_FileMove['config_title'] = 'Configure FileMove';        // Title of
 $lang_plugin_FileMove['config_button'] = 'FileMove';        // Label of the button on the gallery config menu
 $lang_plugin_FileMove['install_note'] = 'Configure plugin using button on Admin toolbar.';        // Note about configuring plugin
 $lang_plugin_FileMove['install_click'] = 'Click button to install plugin.';        // Message to install plugin
-$lang_plugin_FileMove['version'] = 'Ver 1.1';        // Curent plugin version
+$lang_plugin_FileMove['version'] = 'Ver 1.2';        // Curent plugin version
 $lang_plugin_FileMove['folder_name'] = 'Select the folder you will move';
 $lang_plugin_FileMove['folder_ar'] = 'Select destination folder';
 $lang_plugin_FileMove['some_files'] = 'Move SOME files';
@@ -50,4 +50,6 @@ $lang_plugin_FileMove['transfer_file'] = 'Transfert some files from the ';
 $lang_plugin_FileMove['folder2'] = 'folder ';
 $lang_plugin_FileMove['folder_error'] = 'Error, the folder doesn\'t exist!';
 $lang_plugin_FileMove['traitement'] = 'Files transfered';
+$lang_plugin_FileMove['install_info'] = 'Add a menu item after Documentation in the Information menu to access at the plugin page';
+$lang_plugin_FileMove['extra_info'] = 'Click on the FileMove menu item in the Information menu to access at the plugin page';
 ?>
